@@ -191,7 +191,7 @@ local function get_speaker(cfg)
 	return speaker
 end
 
-local function message_user_choice(cfg, speaker, options, text_input, sound)
+local function message_user_choice(cfg, speaker, options, text_input, sound, voice)
 	local image, left_side = get_image(cfg, speaker)
 	local caption = get_caption(cfg, speaker)
 
@@ -235,7 +235,25 @@ local function message_user_choice(cfg, speaker, options, text_input, sound)
 
 	return function()
 		if sound then wesnoth.play_sound(sound) end
+		if voice then
+			local speech = {
+				id = "wml_message_speaker",
+				sounds = voice,
+				loops = 0,
+				delay = 0,
+			}
+			if speaker then
+				speech.x = speaker.x
+				speech.y = speaker.y
+			end
+			wesnoth.add_sound_source(speech)
+		end
+
 		local option_chosen, ti_content = wesnoth.show_message_dialog(msg_cfg, options, text_input)
+
+		if voice then
+			wesnoth.remove_sound_source("wml_message_speaker")
+		end
 
 		if option_chosen == -2 then -- Pressed Escape (only if no input)
 			wesnoth.skip_messages()
@@ -362,7 +380,7 @@ function wesnoth.wml_actions.message(cfg)
 		wesnoth.fire("redraw")
 	end
 
-	local msg_dlg = message_user_choice(cfg, speaker, options, text_input, cfg.sound)
+	local msg_dlg = message_user_choice(cfg, speaker, options, text_input, cfg.sound, cfg.voice)
 
 	local option_chosen
 	if not has_input then
