@@ -155,6 +155,7 @@ Version 1.13.7+dev:
    * [animate_unit] now raises an error if the flag key is missing
    * Fix [set_variable][join] not working with translatable strings
    * [sound_source] now starts playing the sound immediately
+   * New voice key in [message] and [story][part]
  * Miscellaneous and bug fixes:
    * Fixed base animation showing on walking corpse & soulless bats
      (bug #25673)
